# hello_world_android_egui

./: BUILD_ANDROID.md  Cargo.toml  LICENSE  README.md
src/: android_utils.rs  lib.rs
