[package]
name = "hello_world_android_egui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
egui = "0.25"
egui-winit = "0.25"
egui_wgpu_backend = { git = "https://github.com/inferrna/egui_wgpu_backend", branch="wgpu0.19_egui0.25" }
epi = "0.17"
chrono = "0.4"
pollster = "0.3"
wgpu = { version = "0.19", default-features = false }
tracing-subscriber = "0.3"
egui_demo_lib = "0.25"
log = "*"

[target.'cfg(debug_assertions)'.dependencies]
simple_logger = "*"
android_logger = "0.13"

# This dependency will only be included when not targeting Android
[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { version= "0.29", features = ["wayland", "x11"] }
egui_winit_platform = { git = "https://github.com/inferrna/egui_winit_platform", branch="winit0.29_egui0.25", features = ["linux_desktop"] }

# This dependency will only be included when targeting Android
[target.'cfg(target_os = "android")'.dependencies]
winit = { version= "0.29", features = ["android-native-activity"] } #default-features = false,
egui_winit_platform = { git = "https://github.com/inferrna/egui_winit_platform", branch="winit0.29_egui0.25", features = ["android-native-activity"] }

[package.metadata.android]
package = "org.egui.helloworld"
#build_targets = [ "aarch64-linux-android" ]
build_targets = [ "armv7-linux-androideabi" ]
large_heap = true

[package.metadata.android.sdk]
min_sdk_version = 20
target_sdk_version = 32

[package.metadata.android.application]
extract_native_libs = true

[package.metadata.android.application.activity]
config_changes = "orientation"

# Change to your location
[package.metadata.android.signing.release]
path = "/home/inferno/.android/debug.keystore"
keystore_password = "android"